--- a/Projects/xxdCmdb/web/templates/index.html
+++ b/Projects/xxdCmdb/web/templates/index.html
@@ -28,7 +28,7 @@
             <div class="info-box task-bg">
                 <i class="fa fa-tasks"></i>
 
-                <a class="count" href="/task_virtual.html">装机</a>
+                <a class="count" href="/docker_index.html">装机</a>
                 <div class="title">Task</div>
             </div>
         </div>
